<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
      >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/enter_your_account_information_please"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/useraccount"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:background="@layout/rounded_border_edittext"
        android:hint="@string/your_card_number"
        android:layout_marginTop="50dp"        >



    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:background="@layout/rounded_border_edittext"
        android:hint="@string/your_card_password"
        android:layout_marginTop="50dp"
        tools:ignore="TextFields"> </EditText>

    <Button
        android:id="@+id/confirm_payments"
        android:layout_marginTop="60dp"
        android:text="@string/confirm_payment"
        android:background="@drawable/button_default"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>