<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".Actitvity.EditProfile">

    <RatingBar
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/price"
        android:background="@layout/rounded_border_edittext"
        android:inputType="number"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Item_description" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/add_new_item"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="Select Image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Item_description"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/description"
        android:background="@layout/rounded_border_edittext"

        android:inputType="text"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_address" />

    <EditText
        android:id="@+id/item_address"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:background="@layout/rounded_border_edittext"
        android:textColor="@color/black"
        android:hint="@string/address"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_" />

    <EditText
        android:id="@+id/name_"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@layout/rounded_border_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Spinner
        android:id="@+id/job_cat_name"
        android:layout_width="221dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:background="@layout/rounded_border_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/job_spinner"
        android:layout_width="221dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"

        android:background="@layout/rounded_border_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_cat_name"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/image_"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Add"
        android:visibility="visible"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>